加入了后台模板
加入了后台模板

--- a/application/index/view/public/base.html
+++ b/application/index/view/public/base.html
@@ -62,13 +62,7 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                    <div class="header-top-on">
-                        <ul class="social-in">
-                            <li><a href="#"><i> </i></a></li>
-                            <li><a href="#"><i class="facebook"> </i></a></li>
-                            <li><a href="#"><i class="tin"> </i></a></li>
-                        </ul>
-                    </div>
+
                     <div class="clearfix"> </div>
                 </div>
                 <!---->
@@ -104,7 +98,7 @@
         <i class="line-in line-in1"> </i>
         <i class="line-in line-in2"> </i>
     </div>
-    <p class="footer-class">Copyright &copy; 2015.{$author} All rights reserved.</p>
+    <p class="footer-class">Copyright &copy; 2017.{$author} All rights reserved.&nbsp {$site_email}</p>
     <script type="text/javascript">
         $(document).ready(function() {
             $().UItoTop({ easingType: 'easeOutQuart' });
