--- a/application/adminstation/view/public/base.html
+++ b/application/adminstation/view/public/base.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{include file="Public:head" /}
+<div id="wrapper">
+    <!-- Navigation -->
+    {include file="Public:header" /}
+    <div id="page-wrapper">
+        {block name="body"}{/block}
+    </div>
+</div>
+{include file="Public:end" /}
